Allow running unit tests with module system